further media support changes and debugging - still doesn't compile